--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>A very important question</title>
 
-		<link rel="stylesheet" href="public/index.css">
+		<link rel="stylesheet" href="index.css">
 
     <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
     <script type="importmap">
@@ -26,6 +26,6 @@
       </div>
 
     </div>
-		<script type="module" src="./main.js"></script>
+		<script type="module" src="main.js"></script>
 	</body>
 </html>
